--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "build": "tsc",
     "start": "node build/index.js",
     "dev": "tsc-watch --onSuccess \"node build/index.js\"",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit",
+    "prepare": "npm run build"
   },
   "keywords": [
     "docker",
@@ -19,8 +25,14 @@
   "devDependencies": {
     "@modelcontextprotocol/sdk": "^1.17.5",
     "@types/dockerode": "^3.3.43",
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.3.1",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "dockerode": "^4.0.7",
+    "eslint": "^8.57.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.1",
     "tsc-watch": "^7.1.1",
     "typescript": "^5.9.2",
     "zod": "^3.25.76"
