--- a/.vscode/mcp.json.example
+++ b/.vscode/mcp.json.example
@@ -2,10 +2,17 @@
   "servers": {
     "docker-agent": {
       "type": "stdio",
-      "command": "node",
-      "args": ["/path/to/docker_mcp/build/index.js"],
+      "command": "docker",
+      "args": [
+        "run",
+        "-i",
+        "--rm",
+        "-e",
+        "DOCKER_SERVERS",
+        "ghcr.io/florentb974/docker-mcp:latest"
+      ],
       "env": {
-        "DOCKER_SERVERS": "remote:192.168.1.200:2375:http,local:localhost:2375:http"
+        "DOCKER_SERVERS": "local:socket:/var/run/docker.sock,remote:192.168.1.100:2735:http"
       }
     }
   }
